--- a/src/Custom/WebBundle/Resources/config/routing.yml
+++ b/src/Custom/WebBundle/Resources/config/routing.yml
@@ -9,3 +9,13 @@ course_learn:
 course_lesson_show:
     pattern:  /course/{courseId}/lesson/{lessonId}
     defaults: { _controller: CustomWebBundle:CourseLesson:show }
+
+course_lesson_learn_start:
+    pattern:  /course/{courseId}/lesson/{lessonId}/learn/start
+    defaults: { _controller: CustomWebBundle:CourseLesson:learnStart }
+    methods: [POST]
+
+course_lesson_learn_finish:
+    pattern:  /course/{courseId}/lesson/{lessonId}/learn/finish
+    defaults: { _controller: CustomWebBundle:CourseLesson:learnFinish }
+    methods: [POST]
