--- a/src/Custom/AdminBundle/Resources/config/services.yml
+++ b/src/Custom/AdminBundle/Resources/config/services.yml
@@ -1,5 +1,8 @@
 parameters:
 #    custom_admin.example.class: Custom\AdminBundle\Example
+    template_overwrite_map:
+        TopxiaAdminBundle : CustomAdminBundle
+        OrgBundle: CustomAdminBundle
 
 services:
 #    custom_admin.example:
