--- a/src/Topxia/AdminBundle/Resources/config/menus_admin.yml
+++ b/src/Topxia/AdminBundle/Resources/config/menus_admin.yml
@@ -472,9 +472,11 @@ admin:
                     children:
                         admin_my_cloud_overview:
                             name: 账户概览
+                            visible: false
                         admin_cloud_bill:
                             name: 云视频账单
                             router_name: admin_cloud_bill
+                            visible: false
                 admin_cloud_video_setting:
                     name: 云视频设置
                     router_name: admin_setting_cloud_video
@@ -498,6 +500,7 @@ admin:
                     children:
                         admin_edu_cloud_search:
                             name: 云搜索
+                            visible: false
                 admin_setting_cloud_attachment:
                     name: 云附件设置
                     children:
@@ -512,23 +515,28 @@ admin:
                         admin_app_center:
                             name: 应用中心
                             router_name: admin_app_center
+                            visible: false
                             router_params:
                                 postStatus: all
                         admin_app_installed:
                             name: 已购项目
+                            visible: false
                             router_params:
                                 postStatus: all
                         admin_app_upgrades:
                             name: 更新
                             class: app-upgrade
+                            visible: false
                         admin_app_logs:
                             name: 更新日志
+                            visible: false
                 admin_setting_cloud:
                     name: 授权信息
                     children:
                         admin_setting_my_cloud:
                             name: 授权信息
                             router_name: admin_setting_cloud
+                            visible: false
         admin_system:
             name: 系统
             router_name: admin_setting_site
