--- a/src/Topxia/AdminBundle/Resources/config/menus_admin.yml
+++ b/src/Topxia/AdminBundle/Resources/config/menus_admin.yml
@@ -177,6 +177,7 @@ admin:
                                     visable: ( filter == 'normal' and course.recommended )
                                     icon: 'glyphicon glyphicon-hand-right'
                                     mode: none
+                                    visible: false
                                 admin_course_copy:
                                     name: 复制课程
                                     router_params:
@@ -194,6 +195,7 @@ admin:
                                     group: groupButton
                                     icon: 'glyphicon glyphicon-eye-open'
                                     blank: 1
+                                    visible: false
                                 admin_course_member_preview:
                                     name: 预览：作为已购买用户
                                     router_name: course_show
@@ -203,6 +205,7 @@ admin:
                                     group: groupButton
                                     icon: 'glyphicon glyphicon-eye-open'
                                     blank: 1
+                                    visible: false
                                 admin_course_close:
                                     name: 关闭课程
                                     router_params:
@@ -213,6 +216,7 @@ admin:
                                     mode: none
                                     class: close-course
                                     visable: (course.status == 'published')
+                                    visible: false
                                 admin_course_sms_prepare:
                                     name: 发送发布通知短信
                                     router_name: sms_prepare
@@ -223,6 +227,7 @@ admin:
                                     icon: 'glyphicon glyphicon-envelope'
                                     mode: modal
                                     visable: (course.status == 'published')
+                                    visible: false
                                 admin_course_publish:
                                     name: 发布课程
                                     router_params:
@@ -255,12 +260,14 @@ admin:
                             router_params:
                                 status: coming
                             router_name: admin_live_course
+                            visible: false
                 admin_course_thread:
                     name: 话题管理
                     children:
                         admin_course_thread_manage:
                             name: 课程话题
                             router_name: admin_thread
+                            visible: false
                 admin_course_question:
                     name: 问答管理
                     children:
@@ -269,12 +276,14 @@ admin:
                             router_name: admin_question
                             router_params:
                                 postStatus: unPosted
+                            visible: false
                 admin_course_note:
                     name: 笔记管理
                     children:
                         admin_course_note_manage:
                             name: 笔记管理
                             router_name: admin_course_note
+                            visible: false
                 admin_course_review:
                     name: 评价管理
                     children:
@@ -282,6 +291,7 @@ admin:
                             name: 课程评价
                             router_name: admin_review
                             group: 1
+                            visible: false
                 admin_course_category:
                     name: 分类管理
                     children:
@@ -296,12 +306,14 @@ admin:
                                     router_params_context: 1
                                     group: topBtn
                                     mode: modal
+                            visible: false
                 admin_course_tag:
                     name: '标签管理'
                     children:
                         admin_course_tag_manage:
                             name: '标签管理'
                             router_name: admin_tag
+                            visible: false
                             children:
                                 admin_course_tag_add:
                                     name: '新增标签'
