--- a/src/Topxia/AdminBundle/Resources/config/menus_admin.yml
+++ b/src/Topxia/AdminBundle/Resources/config/menus_admin.yml
@@ -92,6 +92,7 @@ admin:
                                     visable: (user.locked == 1)
                                     router_params:
                                         id: (user.id)
+                                    visible: false
                         admin_login_record:
                             name: 登录日志
                 admin_teacher:
@@ -100,6 +101,7 @@ admin:
                         admin_teacher_manage:
                             name: 教师管理
                             router_name: admin_teacher
+                            visible: false
                             children: 
                                 admin_teacher_promote:
                                     name: 推荐老师
@@ -121,6 +123,7 @@ admin:
                                         id: (user.id)
                         admin_teacher_promote_list:
                             name: 教师推荐
+                            visible: false
                 admin_approval_manage:
                     name: 实名认证管理
                     children:
@@ -128,6 +131,7 @@ admin:
                             name: 实名认证管理
                             router_params:
                                 approvalStatus: approving
+                            visible: false
                             children:
                                 admin_approval_cancel:
                                     name: 撤销
@@ -141,6 +145,7 @@ admin:
                     children:
                         admin_message:
                             name: 私信管理
+                            visible: false
         admin_course:
             name: 课程
             children:
