--- a/app/phpunit.xml.dist
+++ b/app/phpunit.xml.dist
@@ -15,10 +15,7 @@
 
     <testsuites>
         <testsuite name="Project Test Suite">
-            <directory>../src/Classroom/Service/Classroom/Tests</directory>
-            <directory>../src/Topxia/Common/Tests</directory>
-            <directory>../src/Topxia/Component/*/Tests</directory>
-            <directory>../src/Topxia/Service/*/Tests</directory>
+            <directory>../plugins/InternalTraining/Service/*/Tests</directory>
         </testsuite>
     </testsuites>
 
@@ -30,41 +27,11 @@
 
     <filter>
         <whitelist>
-            <directory>../src/Classroom/Service/</directory>
+            <directory>../plugins/InternalTraining/Service/</directory>
             <exclude>
-                <directory>../src/Classroom/Service/Classroom/Tests</directory>
-                <file>../src/Classroom/Service/*/*Service.php</file>
-                <file>../src/Classroom/Service/*/Dao/*Dao.php</file>
-                <file>../src/Topxia/Service/**/module_config.php</file>
-                <directory>../src/Topxia/Service/Util/Phpsec</directory>
-                <directory>../src/Topxia/Component/Payment</directory>
+                <directory>../plugins/InternalTraining/Service/*/Tests</directory>
             </exclude>
 
-            <directory>../src/Topxia/Common</directory>
-            <exclude>
-                <directory>../src/Topxia/Common/Tests</directory>
-            </exclude>
-
-            <directory>../src/Topxia/Component</directory>
-            <exclude>
-                <directory>../src/Topxia/Component/*/Tests</directory>
-            </exclude>
-
-            <directory>../src/Topxia/Service</directory>
-            <exclude>
-                <directory>../src/Topxia/Service/*/Tests</directory>
-                <file>../src/Topxia/Service/*/*Service.php</file>
-                <file>../src/Topxia/Service/*/Dao/*Dao.php</file>
-            </exclude>
-
-<!--
-            <exclude>
-                <directory>../src/*/*Bundle/Resources</directory>
-                <directory>../src/*/*Bundle/Tests</directory>
-                <directory>../src/*/Bundle/*Bundle/Resources</directory>
-                <directory>../src/*/Bundle/*Bundle/Tests</directory>
-            </exclude>
--->
         </whitelist>
     </filter>
 
