--- a/src/Topxia/AdminBundle/Resources/config/menus_admin.yml
+++ b/src/Topxia/AdminBundle/Resources/config/menus_admin.yml
@@ -447,19 +447,23 @@ admin:
                     children:
                         admin_bill:
                             name: 现金账单
+                            visible: false
                         admin_coin_records:
                             name: 虚拟币账单
+                            visible: false
                 admin_coin_user:
                     name: 虚拟币管理
                     children:
                         admin_coin_user_records:
                             name: 记录
+                            visible: false
                             router_name: admin_coin_user_records
                 admin_course_refunds:
                     name: 课程退款管理
                     children:
                         admin_course_refunds_manage:
                             name: 课程退款管理
+                            visible: false
                             router_name: admin_order_refunds
                             router_params:
                                 targetType: course
