feature: 权限列表隐藏改用后台方案，前端方案改动面小，但是只针对zTree这一个树型组件不够通用。

--- a/src/SensitiveWord/SensitiveWordBundle/Resources/config/menus_admin.yml
+++ b/src/SensitiveWord/SensitiveWordBundle/Resources/config/menus_admin.yml
@@ -5,6 +5,7 @@ admin_operation_keyword:
     children:
         admin_keyword:
             name: 敏感词列表
+            disable: true
             children:
                 admin_keyword_create:
                     name: 添加敏感词
@@ -12,6 +13,7 @@ admin_operation_keyword:
                     group: topBtn
         admin_keyword_banlogs:
             name: 屏蔽记录
+            disable: true
 
 
 
