--- a/src/Org/OrgBundle/Resources/config/menus_admin.yml
+++ b/src/Org/OrgBundle/Resources/config/menus_admin.yml
@@ -13,7 +13,7 @@ admin_user_org_update:
     group: groupButton
     router_params:
         id: (user.id)
-    visible: false
+    disable: false
 
 # admin_move_course_to_org:
 #     name: 推送课程
