--- a/src/Classroom/ClassroomBundle/Resources/config/menus_admin.yml
+++ b/src/Classroom/ClassroomBundle/Resources/config/menus_admin.yml
@@ -103,8 +103,9 @@ admin_classroom_setting:
     name: 班级
     parent: admin_setting_course_setting
     after: admin_setting_live_course
-admin_classroom_review:
+admin_classroom_review_tab:
     name: 班级评价
+    router_name: admin_classroom_review
     parent: admin_course_review
     disable: true
 admin_classroom_thread_manage:
