--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -75,5 +75,6 @@ security:
         - { path: ^/admin/optimize, role: ROLE_BACKEND }
         - { path: ^/admin, role: ROLE_BACKEND }
         - { path: /login, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: /password/reset, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: /.*, role: ROLE_USER }
         #- { path: ^/_internal, roles: IS_AUTHENTICATED_ANONYMOUSLY, ip: 127.0.0.1 }
