--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -74,6 +74,7 @@ security:
         - { path: ^/admin/upgrade, role: ROLE_BACKEND }
         - { path: ^/admin/optimize, role: ROLE_BACKEND }
         - { path: ^/admin, role: ROLE_BACKEND }
+        - { path: ^/common/crontab, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: /login, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: /password/reset, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: /.*, role: ROLE_USER }
