--- a/src/Org/OrgBundle/Resources/config/menus_admin.yml
+++ b/src/Org/OrgBundle/Resources/config/menus_admin.yml
@@ -14,7 +14,8 @@ admin_user_org_update:
     group: groupButton
     router_params:
         id: (user.id)
-    disable: false
+    disable: true
+    visable: false
 
 # admin_move_course_to_org:
 #     name: 推送课程
